<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginScreen.LoginFragment">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_above="@id/loginHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="70dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/onboarding" />

        <TextView
            android:fontFamily="@font/circular_std"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The easiest way to order"
            android:textColor="@color/black2"
            android:textSize="25sp" />

        <TextView
            android:fontFamily="@font/circular_std"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black2"
            android:text="No lines. No waiting."
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/loginHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/circular_std"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/circular_std"
            android:hint="Password"
            android:inputType="textPassword" />

        <!--       <com.google.android.material.textfield.TextInputLayout-->
        <!--           android:layout_margin="10dp"-->
        <!--           style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
        <!--           android:hint="Email"-->
        <!--           android:layout_width="match_parent"-->
        <!--           android:layout_height="wrap_content">-->

        <!--           <com.google.android.material.textfield.TextInputEditText-->
        <!--               android:inputType="textEmailAddress"-->
        <!--               android:layout_width="match_parent"-->
        <!--               android:layout_height="wrap_content"/>-->

        <!--       </com.google.android.material.textfield.TextInputLayout>-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_margin="10dp"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
        <!--            android:hint="Password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:inputType="textPassword"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"/>-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/orange"
            android:padding="15dp"
            android:text="Sign in" />

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>