...
            android:gravity="center"
            android:text="Welcome Aleksandar"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
...
            android:text="logout" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item" />

    <ProgressBar
        android:id="@+id/progressBar"
...
